fixed imports and man pages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports:
     dplyr,
     tidyr,
     tibble,
-    Biobase
+    Biobase,
+    MsExperiment
 Suggests:
     CAMERA,
     testthat (>= 3.0.0),
