--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(XCMSnExp_CAMERA_peaklist_long)
 export(chromPeaks_classic)
 importFrom(Biobase,pData)
+importFrom(MsExperiment,sampleData)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,any_of)
 importFrom(dplyr,as_tibble)
@@ -17,12 +18,12 @@ importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,ungroup)
-importFrom(methods,as)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,complete)
 importFrom(tidyr,gather)
 importFrom(tidyr,nesting)
 importFrom(tidyr,unnest)
+importFrom(utils,globalVariables)
 importFrom(xcms,chromPeakData)
 importFrom(xcms,chromPeaks)
 importFrom(xcms,featureDefinitions)
