--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,ungroup)
+importFrom(rlang,syms)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,complete)
 importFrom(tidyr,gather)
