ignore some scripts

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -14,3 +14,7 @@ docs/*
 _pkgdown.yml
 package.json
 .claude
+VERSION_EXPLANATION.md
+add-shas-to-news.sh
+cleanup-releases.sh
+sync-historical-tags.sh
